--- a/index.html
+++ b/index.html
@@ -1,1 +1,142 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Professional Interactive Traffic Light</title>
+  <style>
+    body {
+      background: linear-gradient(135deg, #232526 0%, #414345 100%);
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      font-family: "Segoe UI", Arial, sans-serif;
+    }
+    .traffic-light-casing {
+      background: linear-gradient(180deg, #333 60%, #191919 100%);
+      border: 4px solid #606060;
+      border-radius: 32px;
+      box-shadow: 0 12px 48px rgba(0,0,0,0.28), 0 1px 0 #999 inset;
+      padding: 32px 36px;
+      display: flex;
+      flex-direction: column;
+      gap: 28px;
+      width: 132px;
+      align-items: center;
+      position: relative;
+    }
+    .traffic-light-casing::before {
+      content: "";
+      position: absolute;
+      left: 50%;
+      top: 14px;
+      width: 60%;
+      height: 8px;
+      background: linear-gradient(90deg, #f4f4f4 0%, #aaa 100%);
+      border-radius: 8px;
+      transform: translateX(-50%);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.18);
+      opacity: 0.25;
+    }
+    .light {
+      width: 64px;
+      height: 64px;
+      border-radius: 50%;
+      background: #262626;
+      box-shadow:
+        0 0 0 3px #222,
+        0 2px 12px #000 inset,
+        0 2px 10px #0007;
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: background 0.3s, box-shadow 0.3s;
+      overflow: hidden;
+    }
+    .light.on {
+      box-shadow:
+        0 0 0 3px #222,
+        0 2px 12px #000 inset,
+        0 0 40px 10px var(--glow),
+        0 2px 10px #0007;
+      background: radial-gradient(circle at 60% 35%, var(--color) 70%, #222 100%);
+    }
+    .light.red { --color: #ff2d2d; --glow: #ff2d2d80; }
+    .light.yellow { --color: #ffec4b; --glow: #ffe10080; }
+    .light.green { --color: #40d94b; --glow: #40d94b80; }
+    /* Glassy reflection */
+    .light::after {
+      content: "";
+      position: absolute;
+      top: 12%;
+      left: 15%;
+      width: 70%;
+      height: 40%;
+      border-radius: 80% 80% 60% 60%;
+      background: linear-gradient(135deg, rgba(255,255,255,0.30) 0%, rgba(255,255,255,0.02) 80%);
+      pointer-events: none;
+      filter: blur(1.2px);
+      opacity: 0.7;
+    }
+    /* Button styling */
+    .panel {
+      margin-top: 36px;
+      background: #222d;
+      padding: 18px 32px;
+      border-radius: 18px;
+      box-shadow: 0 4px 32px #0003;
+    }
+    button {
+      padding: 10px 36px;
+      font-size: 1.15rem;
+      border-radius: 12px;
+      border: none;
+      background: linear-gradient(90deg, #3498db 40%, #2076b8 100%);
+      color: #fff;
+      cursor: pointer;
+      font-weight: 600;
+      box-shadow: 0 2px 8px #217dbb40;
+      transition: background 0.2s, box-shadow 0.2s, transform 0.1s;
+      outline: none;
+      margin-top: 4px;
+    }
+    button:active {
+      background: linear-gradient(90deg, #2076b8 60%, #3498db 100%);
+      box-shadow: 0 2px 4px #217dbb40;
+      transform: scale(0.98);
+    }
+    .label {
+      margin-bottom: 10px;
+      color: #eeeeee;
+      font-size: 1.08rem;
+      letter-spacing: 0.08em;
+      text-align: center;
+      text-shadow: 0 1px 8px #0006;
+    }
+  </style>
+</head>
+<body>
+  <div class="traffic-light-casing" aria-label="Traffic Light">
+    <div class="light red on" aria-label="Red light"></div>
+    <div class="light yellow" aria-label="Yellow light"></div>
+    <div class="light green" aria-label="Green light"></div>
+  </div>
+  <div class="panel">
+    <div class="label">Press to change light</div>
+    <button id="changeBtn">Change Light</button>
+  </div>
+  <script>
+    const lights = document.querySelectorAll('.light');
+    const btn = document.getElementById('changeBtn');
+    let current = 0; // 0 = red, 1 = yellow, 2 = green
 
+    btn.onclick = () => {
+      lights.forEach(light => light.classList.remove('on'));
+      current = (current + 1) % lights.length;
+      lights[current].classList.add('on');
+    };
+  </script>
+</body>
+</html>
